--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
 	  <h1>欢迎但先生。</h1>
-    <img src="https://www.midorg.com/midlogo.png" alt="logo" width="100px" height="100px">
+    <img src="https://myly1314.github.io/danxainsheng/baby_dan.jpg" alt="logo" width="100px" height="100px">
     <br>
     
     <a
