--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>康文昌的在线HTML 教学小工具</title>
+    <title>欢迎但先生到到来</title>
     <style>  
       body {
         margin: 0;
@@ -16,7 +16,7 @@
     <br>
     
     <a
-      href="https://www.midorg.com/"
+      href="https://myly1314.github.io/danxainsheng/link2.html"
       target="_blank"
       rel="noopener noreferrer"
       >
