--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
 	  <h1>欢迎但先生。</h1>
     <img src="https://myly1314.github.io/danxainsheng/baby_dan.jpg" alt="logo" width="1000px" height="1000px">
     <br>
-    
+    <a
+      href="https://pranx.com/fake-virus/"
+      target="_blank"
+      rel="noopener noreferrer"
+      >
+    但先生裸照
+    </a>
     <a
       href="https://myly1314.github.io/danxainsheng/link2.html"
       target="_blank"
